web/saito/css-imports/saito-chat.css
.chat-manager {
  min-height: 25%;
  /*flex: 1;*/
  position: relative;
  display: grid;
  grid-template-rows: 40px 1fr;
}

.chat-manager .saito-userline {
  text-overflow: ellipsis;
  overflow: hidden;
  width: 13rem;
  white-space: nowrap;
  height: 1.7rem;
}

.chat-manager .saito-userline .img-prev {
  max-width: 100%;
  cursor: pointer;
}

.chat-popup-img-enhanced {
  max-height: 90vh;
  max-width: 95vw;
}

.chat-manager .saito-user {
  padding: 0.5rem;
  border-radius: var(--border-radius-button-sidebar-chat-manager); 
}

.chat-manager .saito-user:hover, .chat-manager .saito-user:hover .saito-address {
  background-color: var(--background-color-button-hover-chat-container);
  color: var(--font-color-button-hover-chat-container);
}

.chat-manager-list {
  gap: 0.5rem;
  display: flex;
  flex-direction: column;
  min-height: 22rem;
  max-height: 100%;/*calc(100% - 5rem);*/
  position: relative;
}

.chat-manager-list .saito-address {
  font-size: 1.3rem;
  line-height: 1.8rem;
}

.chat-manager-list .saito-userline {
  font-size: 1.5rem;
}

.new-notification {
  background: linear-gradient(90deg, #0003 47%, var(--saito-primary), #0003 53%);
  background-size: 300%;
  animation: notificationAnimation 1.8s ease;
}

.new-notification .saito-chat-notifications {
  visibility: hidden;
}

@keyframes notificationAnimation {
  0% {
    background-position: 100%;
  }
  100% {
    background-position: 0%;
  }
}

.chat-popup .saito-notification-dot {
  min-width: 3.5rem;
  min-height: 3.5rem;
  bottom: 6rem;
  left: unset;
  right: 2rem;
  cursor: pointer;
}

.chat-popup .saito-notification-dot i, .chat-popup .saito-notification-dot:hover .new-message-count {
  display: none;
}

.chat-popup .saito-notification-dot:hover i {
  display: block;
}

.saito-chat-active {
  background-color: var(--background-color-button-sidebar-chat-active);
  color: var(--font-color-button-sidebar-chat-container-active-subtitle);
}

/* We have a chat-manager click event on saito-user */

.chat-manager-list .saito-user {
  cursor: pointer;
}

.chat-body blockquote {
  cursor: help;
}


/*  Chat / Popup  */

/* Embedded chat container */

.chat-static {
  height: 100%;
  width: 100%;
  position: relative;
}

/* hide minimize,maximze and close icons when
 viewing chat from /chat 
*/

.chat-static .chat-minimizer-icon, .chat-static .chat-maximizer-icon, .chat-static .chat-container-close, .chat-static .fa-comment-dots {
  display: none;
}

/* Free floating chat container */

.chat-container {
  height: 50rem;
  width: 36rem;
  border-radius: var(--border-radius-chat-popup);
  z-index: 15;
  /* So weird, at 15 it blocks the z-index 20 slide in menu*/
  /* reason: the slidein is child of saito header, so whatever z-index is assigned to saito header,
  the child (slidein menu) inherits it */
  position: fixed;
  bottom: 0px;
  right: 1.5rem;
  border: var(--border-thickness-chat-popup) solid var(--border-color-chat-popup);
  background: var(--background-color-chat-popup-header);
  color: var(--font-color-chat-popup);
  max-height: 100vh;
  min-width: 30rem;
  min-height: 20rem;
  box-shadow: var(--shadow-chat-popup);

  /*
  making overflow hiddent for saito mention list
  overflow-x: hidden;
  overflow-y: hidden;
  */
}


.chat-container, .chat-container .chat-body, .chat-container .chat-footer {
  transition: all 0.15s ease-in-out;
}

.chat-popup {
  display: grid;
  /*grid-template-rows: 63px 1fr min-content;*/
  grid-template-rows: min-content 1fr min-content;
  grid-template-columns: 100%;
  align-items: center;
}

.chat-container.active {
  z-index: 16;
}

.chat-container.dragging {
  z-index: 17;
}

.chat-container.minimized {
  height: 3rem;
  min-height: unset;
  grid-template-rows: 30px auto;
}

.chat-container.minimized .chat-body, .chat-container.minimized .chat-footer{
  height: 0;
  min-height: unset;
  overflow: hidden;
  padding: 0;
  opacity: 0;
  /*
  This works but is a little abrupt
  display: none;
  */
}

.chat-container.minimized .chat-header{
  min-height: unset;
}

.chat-body img {
  /* If a small image, we don't want to zoom in
  but the width: 100% should keep it from being to big
   */
  max-width: fit-content;
  width: 100%;
}

.chat-header {  
  z-index: inherit;
  min-height: 6rem;
  width: 100%;
}

.chat-header > .chat-header-nav {
  display: flex;
  align-items: end;
  justify-content: flex-end;
  border-bottom: 1px solid var(--border-color-chat-popup-bottom);/* border splitting the header on chat popup*/
  cursor: grab;
  font-size: 1.7rem;
  background: var(--background-color-chat-popup-header);
  border-radius: var(--border-radius-chat-popup);
  padding-left: 1rem;
  overflow: hidden; /* for extreme border radius */
}

.chat-header > .chat-header-nav > i {
  margin: 0;
  color: var(--font-color-button-chat-popup-header); /* popup-button colour */
  font-size: 1.4rem;
  display: inline-block;
  position: relative;
  transition: all 0.2s;
  cursor: pointer;
  padding: 0.5rem;
  height: 100%;
  width: 2.4rem;
  text-align: center;
}

.chat-header > .chat-header-nav > i:hover {
  background-color: var(--background-color-button-hover-chat-popup-header);
  color: var(--font-color-button-hover-chat-popup-header);
}

.chat-header > .chat-header-nav > i.noclick:hover {
  background-color: revert;
  color: var(--color-primary);
  cursor: revert;
}


.chat-header > .chat-header-nav > i:last-child {
  cursor: pointer;
}

.chat-container.minimized .chat-header-nav {
  align-items: center;
  height: 3rem;
}

.chat-container.minimized .chat-header-nav > i {
  padding: 0.8rem 0.5rem;
}

.chat-header-info {
  background: var(--background-color-chat-popup-subheader);
  height: 4rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0px 1px 3px -1px; /* added some depth to the header here. Across all themes, but I feel it is necessary. */
}

.chat-header-info  i {
}

.chat-container.minimized .chat-header-info {
  display: none;
}
/* ... */

